--- a/app/views/admin/layouts/_nav_bar.html.erb
+++ b/app/views/admin/layouts/_nav_bar.html.erb
@@ -1,11 +1,4 @@
 <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
-  <div class="flex lg:flex-1">
-    <a href="#" class="-m-1.5 p-1.5">
-      <span class="sr-only">Your Company</span>
-      <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
-    </a>
-  </div>
-
   <div class="flex lg:hidden">
     <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
       <span class="sr-only">Open main menu</span>
@@ -16,9 +9,6 @@
   </div>
 
   <div class="hidden lg:flex lg:gap-x-12">
-    <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Product</a>
-    <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features</a>
-    <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Marketplace</a>
-    <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Company</a>
+    <%= link_to 'Products', admin_products_path, class: 'text-sm font-semibold leading-6 text-gray-900' %>
   </div>
 </nav>
